# hydra

./: .gitignore  Dockerfile  docker-compose.yml
.github/workflows/: publish_ray_jobs_plugin.yml
None/: multirun.yaml
plugins/hydra_ray_jobs_launcher/: README.md  pyproject.toml  setup.py
plugins/hydra_ray_jobs_launcher/example/: config.yaml  my_app.py
plugins/hydra_ray_jobs_launcher/example/config/: config.yaml
plugins/hydra_ray_jobs_launcher/hydra_plugins/hydra_ray_jobs_launcher/: __init__.py  _core.py  blocking_script.py  config.py  container_discovery.py  ray_jobs_launcher.py
plugins/hydra_ray_jobs_launcher/tests/: conftest.py  debug_discovery.py  test_ray_jobs_launcher.py
plugins/hydra_ray_jobs_launcher/tests/example/: config.yaml
